--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Not Found massage -->
     <div id ="err">
       <div class="d-flex justify-content-center">
-        <img src="https://w7.pngwing.com/pngs/899/752/png-transparent-blue-and-red-opps-pop-art-oops-explosion-like-text-bubbles-blue-text-logo.png" alt="">
+        <img src="images/oops.png" alt="">
       </div>
       <H2 class="d-flex justify-content-center">Your :( search result dose not match</H2>
     </div>
@@ -68,7 +68,6 @@
     </div>
   </div>
   <!-- Optional JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   <script src="./app.js"></script>
 
 </body>
